Fix chara showcase title alignment: flex column + align-items center

--- a/app/assets/stylesheets/tasks.css
+++ b/app/assets/stylesheets/tasks.css
@@ -8614,6 +8614,9 @@ body.flash-super::after {
 }
 
 .lp-chara-showcase-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   margin: 0 auto 22px;
   max-width: 960px;
